# HXLibs

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cpp.hint  vcpkg.json
.github/scripts/: static_analysis_report.py
.github/workflows/: ArchLinux.yaml  ArchLinuxClang.yaml  ArchLinuxGCC.yaml  Windows.yaml  WindowsMSVC.yaml  clang-tidy.yml  cppcheck.yml  http-performance.yml
benchmarks/http/: CMakeLists.txt  nginx.conf.in
benchmarks/http/assets/: page.html
benchmarks/http/scripts/: build.sh  report.py  run.sh  wrk_json.lua  ws_bench.py
benchmarks/http/servers/: asio_server.cpp  benchmark_payloads.hpp  fastapi_server.py  hxlibs_server.cpp  yalantinglibs_server.cpp
benchmarks/http/servers/spring-app/: pom.xml
benchmarks/http/servers/spring-app/src/main/java/bench/: Application.java
certs/: GenerateCerts.ps1  GenerateCerts.sh
cmake/: config.cmake  develop.cmake  examples.cmake  includeLib.cmake  install.cmake  tests.cmake
cmake/includeLib/: FindOpenSSL.cmake  FindUring.cmake
documents/: DevelopmentLog.md  DevelopmentPlan.md  HttpPerformanceBenchmark.md  UseRangeTransferFile.md  tools.cpp
documents/CodingStandards/: CppStyle.md
examples/ChatServer/: CMakeLists.txt  ChatServer.cpp
examples/Client/: 01_socks5_proxy_cli.cpp  02_gpt_web_cli.cpp  CMakeLists.txt
examples/FileServer/: CMakeLists.txt  FileServer.cpp
examples/HttpServer/: 01_http_server.cpp
examples/Server/: 01_http_server.cpp  02_https_server.cpp  03_controller.cpp  _.py
examples/ServerAddInterceptor/: CMakeLists.txt  ServerAddInterceptor.cpp
examples/WsServer/: CMakeLists.txt  WsServer.cpp
examples/ai/: ai.cpp  openai.cpp
examples/benchmarks/: 01_server.cpp
include/HXJson/: Json.h  JsonRead.hpp  JsonWrite.hpp  ReflectJson.hpp
include/HXWeb/: HXApi.hpp  HXApiHelper.h  UnHXApi.hpp
include/HXprint/: print.h
lib/liburing/: CMakeLists.txt
src/HXJson/: Json.cpp
src/HXprint/: print.cpp
static/: index.html
static/ass/: 2.ass
static/test/: github.html
tests/: JsonTest.cpp  TestMain.cpp  ToStringTest.cpp  demo_openssl.cpp  tools.cpp
tests/NonVoidVariant/: 01_NonVoidVariant.cpp
tests/ai/: ai.cpp  openai.cpp
tests/client/: 01_http_client.cpp  02_ws_client.cpp  03_brokenWireAndReconnected.cpp  04_http_file_cli_req.cpp  05_http_cli_pool.cpp
tests/container/: 01_NonVoidVariant.cpp  02_Uninitialized.cpp  03_thread_pool.cpp  04_FutureResult.cpp  05_CHashMap.cpp  06_CoSharedPtr.cpp
tests/coroutine/: 01_whenAny.cpp  02_whenAll.cpp  03_yield.cpp  04_SerialExecutor.cpp  04_lock.cpp
tests/data/: 01_io_uring_size.cpp
tests/db/: MakeSql.cpp  Select.cpp
tests/execution/: demo.cpp
tests/include/: doctest.h
tests/log/: 01_log.cpp
tests/meta/: 01_FixedString.cpp
(+213 files in other folders)
